# Structured-Products-Pricing

./: Main.py  README.md  asianoption.py  barrieroption.py  certificatepricer.py  classicoption.py  pyproject.toml  strategiesoption.py
.github/workflows/: ci.yml
Maturity/: Maturity.py
Parameters/: Market.py  ModelParams.py  Option.py  Pricer.py
Parameters/Option/: OptionAmerican.py  OptionAsian.py  OptionBarrier.py  OptionBase.py  OptionDigital.py  OptionEuropean.py
Parameters/Pricer/: PricerBS.py  PricerMC.py  PricerTree.py
Products/Options/: OptionPricerBS.py  OptionPricerBase.py  OptionPricerMC.py  OptionPricerManager.py  OptionPricerTree.py
Strategies/: StrategyBase.py  StrategyVanilla.py
Strategies/StrategiesCertificates/: StrategyCertificateAirbag.py  StrategyCertificateBase.py  StrategyCertificateBonus.py  StrategyCertificateCappedBonus.py  StrategyCertificateDiscount.py  StrategyCertificateOutperformanceBonus.py  StrategyCertificateTwinWin.py
Strategies/StrategiesOption/: StrategyButterflySpread.py  StrategyCallSpread.py  StrategyCondorSpread.py  StrategyDigitalReplication.py  StrategyPutSpread.py  StrategyRiskReversal.py  StrategyStraddle.py  StrategyStrangle.py  StrategyStrap.py  StrategyStrip.py
Utils/: Brownian.py  RegressionModel.py
structured_products_pricing/: Demo.py  app.py
structured_products_pricing/Parameters/: Market.py  ModelParams.py
structured_products_pricing/Rate/: RateCurve.py  RateFlat.py  RateFormat.py  RateStochastic.py  yields_data.xlsx
tests/: test_pricer_client.py
views/: structured_products.py
(+72 files in other folders)
